Activate preview features